<resources>
    <string name="app_name">Infootball</string>
    <string name="titolBotoPortada">GO AND LISTEN</string>
    <string name="botoInfo">INFORMACIO CLUB</string>
    <string name="botoResultats">RESULTATS LLIGUES</string>
    <string name="botoContate">CONTACTE</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="equips">Equips</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_resultats">ResultatsActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">GRUP CHAMPIONS</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="selecciona_grup">GRUP CHAMPIONS</string>
    <string name="grup_A">GRUP A</string>
    <string name="grup_B">GRUP B</string>
    <string name="grup_C">GRUP C</string>
    <string name="grup_D">GRUP D</string>
    <string name="grup_E">GRUP E</string>
    <string name="grup_F">GRUP F</string>
    <string name="grup_G">GRUP G</string>
    <string name="grup_H">GRUP H</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
