<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="grupA"
        android:title="@string/grup_A" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupB"
        android:title="@string/grup_B" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupC"
        android:title="@string/grup_C" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupD"
        android:title="@string/grup_D" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupE"
        android:title="@string/grup_E" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupF"
        android:title="@string/grup_F" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupG"
        android:title="@string/grup_G" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="grupH"
        android:title="@string/grup_H" />

</PreferenceScreen>
