<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.basius.infootball.MainActivityMenuFragment"
    tools:showIn="@layout/activity_main_menu">


    <Button
        android:text="@string/botoInfo"
        android:layout_width="0dp"
        android:id="@+id/buttonInfo"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.62"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="100dp" />

    <Button
        android:text="@string/botoResultats"
        android:layout_width="0dp"
        android:id="@+id/buttonResultats"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintBottom_toTopOf="@+id/buttonContacte"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonInfo"
        android:layout_height="100dp" />

    <Button
        android:text="@string/botoContate"
        android:layout_width="0dp"
        android:id="@+id/buttonContacte"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_height="100dp" />
</android.support.constraint.ConstraintLayout>
